code cleanup: remove debug code
* fixed some more issues of Findbugs and CodePro